# gr_clp

./: CMakeLists.txt
Grafkom/: CMakeLists.txt  Grafkom.cpp  Grafkom.h
Grafkom/Buffer/: Buffer.cpp  Buffer.h
Grafkom/Renderable/: Renderable.cpp  Renderable.h
Grafkom/Renderable/Line/: Line.cpp  Line.h
Grafkom/Renderable/Point/: Point.cpp  Point.h
Grafkom/Renderable/Properties/Color/: Color.cpp  Color.h
Grafkom/Renderable/Shape/: Shape.cpp  Shape.h
Grafkom/Renderer/: Renderer.cpp  Renderer.h
